--- a/www/index.html
+++ b/www/index.html
@@ -256,7 +256,7 @@
                     </div>
 
                     <div class="row" style="margin-bottom: 0;">
-                        <a class="waves-effect waves-light btn btn-large col s5" onclick="addAccount() ;startTimer();" v-on:click="navigate" name="totp"><i class="material-icons right">done</i>Ajouter</a>
+                        <a class="waves-effect waves-light btn btn-large col s5" onclick="addAccount()" v-on:click="navigate" name="totp"><i class="material-icons right">done</i>Ajouter</a>
                     </div>
                 </div>
             </div>
