fix display notify view

--- a/www/index.html
+++ b/www/index.html
@@ -167,8 +167,9 @@
                                 </ul>
                             </div>
                         </div>
-                    </div>
-                    <div class="card" v-if="notified">
+                    </div>                    
+            </div>
+	   <div class="container" v-show="currentView=='notify'">
                         <div class="card-content" >
                             <div class="row" style="margin-bottom: 0;">
                                 <h5>{{additionalData.text}}</h5>
@@ -185,7 +186,6 @@
                                         class="material-icons right">clear</i>refuser</a>
                             </div>
                         </div>
-                    </div>
             </div>
             <div class="container" v-show="currentView=='scanless'">
                 <div class="row" style="margin-bottom: 0;">
