Display confirm page in a card

--- a/www/index.html
+++ b/www/index.html
@@ -170,6 +170,7 @@
                     </div>                    
             </div>
 	   <div class="container" v-show="currentView=='notify'">
+		<div class="card">
                         <div class="card-content" >
                             <div class="row" style="margin-bottom: 0;">
                                 <h5>{{additionalData.text}}</h5>
@@ -186,6 +187,7 @@
                                         class="material-icons right">clear</i>refuser</a>
                             </div>
                         </div>
+		</div>
             </div>
             <div class="container" v-show="currentView=='scanless'">
                 <div class="row" style="margin-bottom: 0;">
