--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
         <link rel="stylesheet" href="css/materialize.min.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/slide.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
         <script type="text/javascript" src="cordova.js"></script>
         <title>Esup Auth</title>
     </head>
@@ -483,8 +483,8 @@
         <script type="text/javascript" src="js/materialize.min.js"></script>
         <script src="js/app.js"></script>
         <script type="text/javascript" src="js/totp.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <script type="text/javascript" src="js/jquery.min.js"></script>
+        <script type="text/javascript" src="js/materialize-1.0.0.min.js"></script>
         <script type="text/javascript" src="js/script.js"></script>
         <script type="text/javascript" src="js/slide.js"></script>
 
