--- a/www/index.html
+++ b/www/index.html
@@ -479,7 +479,7 @@
         <script src="js/app.js"></script>
         <script type="text/javascript" src="js/totp.js"></script>
         <script type="text/javascript" src="js/jquery.min.js"></script>
-        <script type="text/javascript" src="js/materialize-1.0.0.min.js"></script>
+        <script type="text/javascript" src="js/materialize.min.js"></script>
         <script type="text/javascript" src="js/script.js"></script>
         <script type="text/javascript" src="js/slide.js"></script>
 
