--- a/www/index.html
+++ b/www/index.html
@@ -249,6 +249,11 @@
                     <a class="waves-effect waves-light btn btn-large col s12 btn-custom" role="button" v-on:click="scanless">
                         <i class="material-icons right" aria-hidden="true">done</i>Activer
                     </a>
+                    <span class="col s12" style="margin-bottom: 5px;"></span>
+                    <button class="btn btn-large col s12 btn-custom" role="button" v-on:click="scanTag">
+                        <i class="material-icons right" aria-hidden="true">tap_and_play</i>
+                        My button
+                    </button>
                 </div>
             </div>
             <div class="container" v-show="currentView=='totp'">
@@ -445,7 +450,7 @@
                    </p></div>
                </li>
                <li>
-                   <div class="collapsible-header"><i class="material-icons" aria-hidden="true">description</i>EsupNFC</div>
+                   <div class="collapsible-header"><i class="material-icons" aria-hidden="true">description</i>NFC</div>
                    <div class="collapsible-body">
                        <div class="row">
                            <div class="col s12">
